# dfkv

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
deploy/: sync_telemetry.sh
deploy/observability/: CONNECTOR-USAGE.md
docs/: ARCHITECTURE.md  CONNECTORS.md  DEPLOY.md  INTEGRATION.md  METRICS.md  access_log.md  datapath-perf-notes.md  hit_rate_funnel.md  tracing.md
docs/hicache/: DEPLOY.md
docs/lmcache/: DEPLOY.md  DESIGN.md  IMPLEMENTATION.md
docs/superpowers/plans/: 2026-06-18-dfkv-vllm-store-connector.md
docs/superpowers/specs/: 2026-06-18-dfkv-vllm-store-connector-design.md
docs/vllm/: DEPLOY.md
integration/hicache/: dfkv_access_log.py  dfkv_hicache.py  dfkv_hot_config.py  dfkv_metrics.py
integration/lmcache/: Makefile  README.md  pyproject.toml
integration/lmcache/src/dfkv_connector/: __init__.py  access_log.py  adapter.py  config.py  exists_cache.py  key_mapper.py  l2_adapter.py  native_client.py  remote_connector.py
integration/lmcache/src/dfkv_connector/_telemetry/: config.py  metrics_push.py  otlp_json.py
integration/lmcache/tests/: test_key_mapper.py  test_l2_adapter.py  test_l2_adapter_integration.py
integration/vllm/: README.md  pyproject.toml
integration/vllm/src/dfkv_vllm/: __init__.py  _cabi.py  _determinism.py  access_log.py  client_ranks.py  connector.py  coordinator.py  data.py  dfkv_client.py  dfkv_utils.py  metrics.py  scheduler.py  worker.py
integration/vllm/src/dfkv_vllm/_telemetry/: otlp_json.py
integration/vllm/tests/: test_client_ranks.py  test_determinism_guard.py  test_dfkv_client.py  test_gpudirect_regmem.py
python/: dfkv_access_log.py  dfkv_hicache.py  dfkv_metrics.py
src/: con_hash.cc  con_hash.h  dfkv_bench_main.cc  dfkv_c_api.cc  dfkv_c_api.h  dfkv_discover_smoke_main.cc  dfkv_mds_main.cc  dfkv_server_main.cc  dfkv_smoke_main.cc  dfkvctl_main.cc  disk_cache_group.cc  disk_cache_group.h  etcd_client.cc  etcd_client.h  http_client.cc  key_map.h  kv_client.cc  kv_client.h  kv_node_server.cc  kv_node_server.h  kv_store.cc  kv_store.h  md5.h  mds_endpoints.h  mds_server.cc  mds_server.h  membership.h  metrics_http.cc  metrics_http.h  net_util.h  numa_util.h  rdma_server.cc  rdma_server.h  rdma_transport.cc  rdma_transport.h  rdma_verbs.cc  rdma_verbs.h  tcp_transport.cc  tcp_transport.h  transport.h  (+6 more)
src/cache/: dfkv_server_main.cc  disk_cache_group.cc  disk_cache_group.h  disk_slab_store.cc  disk_slab_store.h  kv_node_server.cc  kv_node_server.h  kv_store.cc  kv_store.h  ram_tier.cc  ram_tier.h  rdma_server.cc  rdma_server.h  read_coalescer.h  slab_allocator.cc  slab_allocator.h  store_engine.h  uring_reader.h
src/client/: cuda_ipc.cc  cuda_ipc.h  dfkv_c_api.cc  dfkv_c_api.h  key_map.h  kv_client.cc  kv_client.h  node_dedup.cc  node_dedup.h  node_dedup_gpu.cc  node_dedup_gpu.h  op_metrics.h  peer_health.h  peer_latency.h
src/common/: config_dump.cc  config_dump.h  kv_types.h  membership.h  status.h  value_header.h  version.cc  version.h
src/mds/: dfkv_mds_main.cc  etcd_client.cc  etcd_client.h  mds_member_poller.cc  mds_member_poller.h  mds_metrics.h  mds_proto.h  mds_registrar.cc  mds_registrar.h  mds_server.cc  mds_server.h
src/tools/: dfkv_bench_main.cc  dfkv_discover_smoke_main.cc  dfkv_smoke_main.cc  dfkvctl_main.cc
src/transport/: dev_frame.h  rail_select.h  rdma_transport.cc  rdma_transport.h  rdma_verbs.cc  rdma_verbs.h  tcp_transport.cc  tcp_transport.h  transport.h  transport_factory.cc  transport_factory.h  wire.h
src/utils/: args.h  base64.h  con_hash.cc  con_hash.h  http_client.cc  http_client.h  json_min.h  latency_hist.h  log.h  metrics_http.cc  metrics_http.h  net_util.h  numa_util.h  prom_escape.h  prom_parse.h  thread_name.h
test/: tool_smoke.sh
test/cache/: disk_slab_store_test.cc  kv_store_test.cc  metrics_test.cc  ram_tier_test.cc  read_coalescer_test.cc  slab_allocator_test.cc  store_engine_test.cc
test/client/: batch_test.cc  dynamic_members_test.cc  get_auto_pipelined_test.cc  key_map_test.cc  kv_client_health_test.cc  kv_client_test.cc  node_dedup_gpu_test.cc  node_dedup_test.cc  peer_health_test.cc  peer_latency_test.cc  sg_test.cc
test/common/: config_dump_test.cc  membership_test.cc  version_test.cc
test/mds/: etcd_client_test.cc  mds_metrics_test.cc  mds_proto_test.cc  mds_registrar_test.cc  mds_server_test.cc
test/python/: dfkv_lmcache_native_smoke.py  rdma_e2e_validate.py  test_dfkv_hicache.py  test_dfkv_hot_config.py  test_dfkv_telemetry.py  test_telemetry_vendor_sync.py
test/python/sglang/srt/mem_cache/: hicache_storage.py
test/transport/: connection_pool_test.cc  dev_frame_caps_test.cc  factory_test.cc  qp_depth_negotiation_test.cc  rdma_loopback_test.cc  timeout_test.cc  wire_mds_op_test.cc  wire_test.cc
test/utils/: args_test.cc  con_hash_test.cc  con_hash_weight_test.cc  http_client_test.cc  latency_hist_test.cc  metrics_http_test.cc  net_util_test.cc  numa_util_test.cc  prom_escape_test.cc  prom_parse_test.cc
tests/: c_api_test.cc  con_hash_test.cc  disk_cache_group_test.cc  etcd_client_test.cc  factory_test.cc  failure_modes_test.cc  get_auto_test.cc  http_client_test.cc  key_map_test.cc  kv_client_test.cc  kv_store_test.cc  mds_endpoints_test.cc  mds_proto_test.cc  membership_test.cc  metrics_http_test.cc  metrics_test.cc  rdma_loopback_test.cc  tool_smoke.sh  value_header_test.cc  version_test.cc  wire_mds_op_test.cc
tests/cache/: disk_cache_group_test.cc  kv_store_test.cc
tests/client/: c_api_test.cc  client_metrics_test.cc  failure_modes_test.cc  get_auto_test.cc  kv_client_mds_test.cc  kv_client_test.cc  stress_test.cc
tests/common/: value_header_test.cc
tests/mds/: mds_endpoints_test.cc  mds_member_poller_test.cc  mds_server_test.cc
tests/python/: dfkv_lmcache_native_smoke.py  test_dfkv_hicache.py  test_dfkv_telemetry.py
tests/transport/: rail_select_test.cc
tests/utils/: base64_test.cc  http_client_test.cc  json_min_test.cc  metrics_http_test.cc
