[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfkv-connector"
version = "0.1.0"
description = "LMCache RemoteConnector for the dfkv KV cache (ctypes over libdfkv.so)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Wine93", email = "wine93.info@gmail.com" }]
# Pure-python wheel: dfkv is reached through libdfkv.so via ctypes, loaded at
# runtime by path (DFKV_LIB / remote_storage_plugin.dfkv.lib). No bundled .so,
# no CPython extension, so the wheel is platform-independent.
dependencies = [
  "lmcache",
  "torch",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: tests requiring a live dfkv mds + cache cluster",
]
